# py-robot-sim

./: main.py  pyproject.toml
docs/: 00_CONVETION.md  dev-tools.md  geo_math.md  kinematics.md  sim-engine-claude.md  sim-engine-codex.md  testing.md
tests/: test_undoable_command.py
